cdk.out/RdsStackExample.template.json
{
 "Resources": {
  "publicrds890D239A": {
   "Type": "AWS::SecretsManager::Secret",
   "Properties": {
    "Description": {
     "Fn::Join": [
      "",
      [
       "Generated by the CDK for stack: ",
       {
        "Ref": "AWS::StackName"
       }
      ]
     ]
    },
    "GenerateSecretString": {
     "ExcludeCharacters": " %+~`#$&*()|[]{}:;<>?!'/@\"\\",
     "GenerateStringKey": "password",
     "PasswordLength": 30,
     "SecretStringTemplate": "{\"username\":\"admin\"}"
    },
    "Name": "/rdsstackexample/rds/creds/rds-instance"
   },
   "UpdateReplacePolicy": "Delete",
   "DeletionPolicy": "Delete",
   "Metadata": {
    "aws:cdk:path": "RdsStackExample/public-rds/Resource"
   }
  },
  "publicrdsvpcDDF62439": {
   "Type": "AWS::EC2::VPC",
   "Properties": {
    "CidrBlock": "10.0.0.0/16",
    "EnableDnsHostnames": true,
    "EnableDnsSupport": true,
    "InstanceTenancy": "default",
    "Tags": [
     {
      "Key": "Name",
      "Value": "RdsStackExample/public-rds-vpc"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "RdsStackExample/public-rds-vpc/Resource"
   }
  },
  "publicrdsvpcpublicsubnetSubnet1SubnetABBCE38A": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "VpcId": {
     "Ref": "publicrdsvpcDDF62439"
    },
    "AvailabilityZone": {
     "Fn::Select": [
      0,
      {
       "Fn::GetAZs": ""
      }
     ]
    },
    "CidrBlock": "10.0.0.0/24",
    "MapPublicIpOnLaunch": true,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "public-subnet"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Public"
     },
     {
      "Key": "Name",
      "Value": "RdsStackExample/public-rds-vpc/public-subnetSubnet1"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "RdsStackExample/public-rds-vpc/public-subnetSubnet1/Subnet"
   }
  },
  "publicrdsvpcpublicsubnetSubnet1RouteTableB0649DC9": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "VpcId": {
     "Ref": "publicrdsvpcDDF62439"
    },
    "Tags": [
     {
      "Key": "Name",
      "Value": "RdsStackExample/public-rds-vpc/public-subnetSubnet1"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "RdsStackExample/public-rds-vpc/public-subnetSubnet1/RouteTable"
   }
  },
  "publicrdsvpcpublicsubnetSubnet1RouteTableAssociationC7FAC11A": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "publicrdsvpcpublicsubnetSubnet1RouteTableB0649DC9"
    },
    "SubnetId": {
     "Ref": "publicrdsvpcpublicsubnetSubnet1SubnetABBCE38A"
    }
   },
   "Metadata": {
    "aws:cdk:path": "RdsStackExample/public-rds-vpc/public-subnetSubnet1/RouteTableAssociation"
   }
  },
  "publicrdsvpcpublicsubnetSubnet1DefaultRoute38F5349A": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "RouteTableId": {
     "Ref": "publicrdsvpcpublicsubnetSubnet1RouteTableB0649DC9"
    },
    "DestinationCidrBlock": "0.0.0.0/0",
    "GatewayId": {
     "Ref": "publicrdsvpcIGW58B6DB7B"
    }
   },
   "DependsOn": [
    "publicrdsvpcVPCGWA86EF794"
   ],
   "Metadata": {
    "aws:cdk:path": "RdsStackExample/public-rds-vpc/public-subnetSubnet1/DefaultRoute"
   }
  },
  "publicrdsvpcpublicsubnetSubnet2Subnet4A82F1BC": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "VpcId": {
     "Ref": "publicrdsvpcDDF62439"
    },
    "AvailabilityZone": {
     "Fn::Select": [
      1,
      {
       "Fn::GetAZs": ""
      }
     ]
    },
    "CidrBlock": "10.0.1.0/24",
    "MapPublicIpOnLaunch": true,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "public-subnet"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Public"
     },
     {
      "Key": "Name",
      "Value": "RdsStackExample/public-rds-vpc/public-subnetSubnet2"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "RdsStackExample/public-rds-vpc/public-subnetSubnet2/Subnet"
   }
  },
  "publicrdsvpcpublicsubnetSubnet2RouteTableD20B6645": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "VpcId": {
     "Ref": "publicrdsvpcDDF62439"
    },
    "Tags": [
     {
      "Key": "Name",
      "Value": "RdsStackExample/public-rds-vpc/public-subnetSubnet2"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "RdsStackExample/public-rds-vpc/public-subnetSubnet2/RouteTable"
   }
  },
  "publicrdsvpcpublicsubnetSubnet2RouteTableAssociation613EA259": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "publicrdsvpcpublicsubnetSubnet2RouteTableD20B6645"
    },
    "SubnetId": {
     "Ref": "publicrdsvpcpublicsubnetSubnet2Subnet4A82F1BC"
    }
   },
   "Metadata": {
    "aws:cdk:path": "RdsStackExample/public-rds-vpc/public-subnetSubnet2/RouteTableAssociation"
   }
  },
  "publicrdsvpcpublicsubnetSubnet2DefaultRoute7830B9DF": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "RouteTableId": {
     "Ref": "publicrdsvpcpublicsubnetSubnet2RouteTableD20B6645"
    },
    "DestinationCidrBlock": "0.0.0.0/0",
    "GatewayId": {
     "Ref": "publicrdsvpcIGW58B6DB7B"
    }
   },
   "DependsOn": [
    "publicrdsvpcVPCGWA86EF794"
   ],
   "Metadata": {
    "aws:cdk:path": "RdsStackExample/public-rds-vpc/public-subnetSubnet2/DefaultRoute"
   }
  },
  "publicrdsvpcIGW58B6DB7B": {
   "Type": "AWS::EC2::InternetGateway",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "RdsStackExample/public-rds-vpc"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "RdsStackExample/public-rds-vpc/IGW"
   }
  },
  "publicrdsvpcVPCGWA86EF794": {
   "Type": "AWS::EC2::VPCGatewayAttachment",
   "Properties": {
    "VpcId": {
     "Ref": "publicrdsvpcDDF62439"
    },
    "InternetGatewayId": {
     "Ref": "publicrdsvpcIGW58B6DB7B"
    }
   },
   "Metadata": {
    "aws:cdk:path": "RdsStackExample/public-rds-vpc/VPCGW"
   }
  },
  "publicrdssg724080A5": {
   "Type": "AWS::EC2::SecurityGroup",
   "Properties": {
    "GroupDescription": "RdsStackExample/public-rds-sg",
    "GroupName": "RdsStackExamplePublicRdsSG",
    "SecurityGroupEgress": [
     {
      "CidrIp": "0.0.0.0/0",
      "Description": "Allow all outbound traffic by default",
      "IpProtocol": "-1"
     }
    ],
    "SecurityGroupIngress": [
     {
      "CidrIp": "0.0.0.0/0",
      "Description": "allow TCP access from anywhere",
      "FromPort": 3306,
      "IpProtocol": "tcp",
      "ToPort": 3306
     }
    ],
    "VpcId": {
     "Ref": "publicrdsvpcDDF62439"
    }
   },
   "Metadata": {
    "aws:cdk:path": "RdsStackExample/public-rds-sg/Resource"
   }
  },
  "publicdbSubnetGroup952EA07A": {
   "Type": "AWS::RDS::DBSubnetGroup",
   "Properties": {
    "DBSubnetGroupDescription": "Subnet group for public-db database",
    "SubnetIds": [
     {
      "Ref": "publicrdsvpcpublicsubnetSubnet1SubnetABBCE38A"
     },
     {
      "Ref": "publicrdsvpcpublicsubnetSubnet2Subnet4A82F1BC"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "RdsStackExample/public-db/SubnetGroup/Default"
   }
  },
  "publicdbE7E564DC": {
   "Type": "AWS::RDS::DBInstance",
   "Properties": {
    "DBInstanceClass": "db.t2.micro",
    "AllocatedStorage": "100",
    "CopyTagsToSnapshot": true,
    "DBInstanceIdentifier": "public-db-rds",
    "DBName": "apps",
    "DBSubnetGroupName": {
     "Ref": "publicdbSubnetGroup952EA07A"
    },
    "Engine": "mysql",
    "EngineVersion": "8.0.19",
    "MasterUsername": "admin",
    "MasterUserPassword": "admin123456",
    "PubliclyAccessible": true,
    "StorageType": "gp2",
    "VPCSecurityGroups": [
     {
      "Fn::GetAtt": [
       "publicrdssg724080A5",
       "GroupId"
      ]
     }
    ]
   },
   "UpdateReplacePolicy": "Delete",
   "DeletionPolicy": "Delete",
   "Metadata": {
    "aws:cdk:path": "RdsStackExample/public-db/Resource"
   }
  },
  "CDKMetadata": {
   "Type": "AWS::CDK::Metadata",
   "Properties": {
    "Analytics": "v2:deflate64:H4sIAAAAAAAA/2WQQW/CMAyFfwv3EJYhcR4r0sRpqJ24u6m3BWhSxc4QivLfl4xCN+0U+3v2y0uUVKulVLMnONNcd8dF1M6jjA2DPooayQWvUVTv9jXwEFhUzhL7oLmw33oWOsPG2SSKV/QdybgBhhYIG9QeWdzabfYAm/ea0FrkF+/CUDw2z//AbTQJ+vGgHix8oJdZHV1RP8q4H3RZ2O8qsQvtyeirU2FTVbvA+AbtCSc+sTWR0wbKG+7DpdhaRl9SAeMZLuM1Y7fm/FOfPVoWOU7whi/39H9ASklY16E80OJLraRayofZgYyZ+2DZ9Cjr6/kNNWs3EJMBAAA="
   },
   "Metadata": {
    "aws:cdk:path": "RdsStackExample/CDKMetadata/Default"
   },
   "Condition": "CDKMetadataAvailable"
  }
 },
 "Outputs": {
  "RdsStackInstance": {
   "Value": "RdsStackExample/public-db"
  }
 },
 "Conditions": {
  "CDKMetadataAvailable": {
   "Fn::Or": [
    {
     "Fn::Or": [
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "af-south-1"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "ap-east-1"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "ap-northeast-1"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "ap-northeast-2"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "ap-south-1"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "ap-southeast-1"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "ap-southeast-2"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "ca-central-1"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "cn-north-1"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "cn-northwest-1"
       ]
      }
     ]
    },
    {
     "Fn::Or": [
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "eu-central-1"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "eu-north-1"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "eu-south-1"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "eu-west-1"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "eu-west-2"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "eu-west-3"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "me-south-1"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "sa-east-1"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "us-east-1"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "us-east-2"
       ]
      }
     ]
    },
    {
     "Fn::Or": [
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "us-west-1"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "us-west-2"
       ]
      }
     ]
    }
   ]
  }
 }
}
